# instructional-designer-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.es.md  README.md  SKILL.md  package.json  setup.ps1
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  institution_config.md
agents/: openai.yaml
config/: institution.example.json  institution.schema.json  notebooks.example.json  notebooks.schema.json
desktop-manager/: .dockerignore  DOCKER.md  Dockerfile  PLAN.md  README.md  index.html  package-lock.json  package.json  setup-docker.ps1  setup-docker.sh  vite.config.js
desktop-manager/src/: api.js  dom.js  icons.js  main.js  onboarding.js  router.js  state.js  styles.css  templatePreview.js  toast.js
desktop-manager/src-tauri/: Cargo.toml  tauri.conf.json
desktop-manager/src-tauri/capabilities/: default.json
desktop-manager/src-tauri/src/: config.rs  course.rs  lib.rs  mcp.rs  models.rs  onboarding.rs  palette.rs  paths.rs  payload.rs
desktop-manager/src/pages/: activate.js  courses.js  docs.js  institution.js  notebooklm.js  settings.js  setup.js  syllabus.js  templates.js
desktop-manager/tests/: static-contracts.test.mjs
docs/: guia-claude-desktop.md
references/: bibliografia.md  checklist.md  compilacion-wsl.md  configuracion.md  esquema-silabo.md  figuras-html.md  figuras-tikz.md  plantilla-latex.md
scripts/: latex-linter.js  latex-validator.js  legacy-manager.js  pdf_cutter_template.py
templates/elegantbook-clasico/: meta.json  preamble.tex  skeleton.tex  template.md
