[package]
name = "instructional-designer-manager"
version = "0.1.0"
description = "Gestor visual para el Instructional Designer Skill"
authors = ["Charlie Cárdenas Toledo"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "instructional-designer-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.tauri]
# sin configuración extra necesaria

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
